--- a/app/src/main/res/drawable/input_shapes_green.xml
+++ b/app/src/main/res/drawable/input_shapes_green.xml
@@ -17,7 +17,7 @@
                 android:left="5dp"
                 android:right="5dp"
                 android:top="5dp" />
-            <solid android:color="#ffffff" />
+            <solid android:color="@color/colorPrimary" />
 
 
         </shape>
