--- a/app/src/main/res/layout/activity_crop_task_manager.xml
+++ b/app/src/main/res/layout/activity_crop_task_manager.xml
@@ -36,7 +36,7 @@
 
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/date"
+                        android:text="@string/due_date"
                         android:textColor="@color/colorPrimary"
                         android:textStyle="bold"
                         android:textSize="16sp" />
