--- a/app/src/main/res/layout/crop_spraying_list_card.xml
+++ b/app/src/main/res/layout/crop_spraying_list_card.xml
@@ -191,13 +191,14 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
                     <TextView
 
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Reason : "
+                        android:textStyle="bold"
                         android:textColor="@color/blackText"
                         />
                     <TextView
