--- a/app/src/main/res/layout/crops_list_card.xml
+++ b/app/src/main/res/layout/crops_list_card.xml
@@ -58,6 +58,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:textStyle="bold"
+                                    android:layout_marginRight="5dp"
                                     android:text="Tomatoes " />
 
                                 <TextView
