--- a/app/src/main/res/layout/content_crop_estimate_preview.xml
+++ b/app/src/main/res/layout/content_crop_estimate_preview.xml
@@ -175,7 +175,7 @@
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:text="@string/invoice_due_date" />
+                                android:text="@string/estimate_expiry_date" />
 
                             <TextView
                                 android:id="@+id/text_view_crop_invoice_due_date"
@@ -198,7 +198,7 @@
                                 android:text="Ref # :" />
 
                             <TextView
-                                android:id="@+id/text_view_crop_invoice_order_number"
+                                android:id="@+id/text_view_crop_invoice_reference_number"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
