--- a/app/src/main/res/layout/crop_employee_list_card.xml
+++ b/app/src/main/res/layout/crop_employee_list_card.xml
@@ -3,38 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="4dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginEnd="8dp"
+    android:layout_marginStart="8dp"
+    android:background="@color/white"
     android:orientation="vertical">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-       >
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-
-
-
-                    <LinearLayout
-                        android:orientation="vertical"
-                        android:background="@color/white"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        >
-
-
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+        android:orientation="vertical">
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -46,7 +24,7 @@
                                 android:layout_width="60dp"
                                 android:layout_height="80dp"
                                 android:layout_margin="10dp"
-                                tools:src="@drawable/profile" />
+                                android:src="@drawable/generic_user" />
 
                             <LinearLayout
                                 android:orientation="vertical"
@@ -98,7 +76,7 @@
                                             android:layout_height="20dp"
                                             android:backgroundTint="@color/black"
                                             android:textColor="@color/darker_gray"
-                                            app:srcCompat="@drawable/more_options_icon" />
+                                            android:src="@drawable/more_options_icon" />
 
 
                                     </LinearLayout>
@@ -165,9 +143,9 @@
                                         android:orientation="horizontal">
                                         <ImageView
                                             android:layout_width="25dp"
-                                            android:layout_height="wrap_content"
+                                            android:layout_height="25dp"
                                             android:backgroundTint="@color/black"
-                                            app:srcCompat="@drawable/telephone"
+                                            android:src="@drawable/phone_black"
                                            />
 
                                     <TextView
@@ -234,9 +212,8 @@
 
         </LinearLayout>
     </LinearLayout>
-</LinearLayout>
-                    </LinearLayout>
-                </LinearLayout>
+
+
 
 
 
