--- a/app/src/main/res/layout-land/activity_crop_machine_manager.xml
+++ b/app/src/main/res/layout-land/activity_crop_machine_manager.xml
@@ -366,12 +366,18 @@
 
         </LinearLayout>
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginBottom="10dp"
-            android:gravity="center_horizontal">
+            android:layout_weight="1"
+            android:layout_marginEnd="10dp">
 
             <TextView
 
@@ -384,7 +390,7 @@
 
             <EditText
                 android:id="@+id/txt_crop_machine_purchase_price"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="Enter.."
@@ -392,12 +398,41 @@
                 android:textSize="14sp"
                 android:background="@drawable/input_shapes"
 
-
                 />
 
         </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:layout_marginEnd="10dp"
+                android:visibility="invisible">
 
+                <TextView
 
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/purchase_price"
+                    android:layout_marginBottom="4dp"
+                    android:textSize="15sp"
+                    android:textColor="@color/textColor"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:inputType="none"
+                    android:textSize="14sp"
+                    android:background="@drawable/input_shapes"
+                    android:focusable="false"
+
+                    />
+
+            </LinearLayout>
+
+        </LinearLayout>
 
 
         <Button
@@ -410,7 +445,9 @@
             android:drawableTint="#ffffff"
             android:text="Save "
             android:textAllCaps="false"
-            android:textColor="#ffffff" />
+            android:textColor="#ffffff"
+            android:layout_marginStart="100dp"
+            android:layout_marginEnd="100dp"/>
 
 
 
