--- a/app/src/main/res/layout-land/content_crop_fertilizer_calculator_results.xml
+++ b/app/src/main/res/layout-land/content_crop_fertilizer_calculator_results.xml
@@ -94,6 +94,7 @@
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
+
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
@@ -105,14 +106,14 @@
            >
            <TableRow
 
-               android:layout_width="wrap_content"
+               android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:background="@drawable/crop_invoice_table_border"
 
                >
                <LinearLayout
-                   android:layout_width="100dp"
+                   android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >
@@ -126,7 +127,7 @@
                        android:textSize="13sp"/>
                </LinearLayout>
                <LinearLayout
-                   android:layout_width="100dp"
+                   android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/crop_invoice_table_border"
                    android:orientation="horizontal"
@@ -142,7 +143,7 @@
                        android:textSize="13sp"/>
                </LinearLayout>
                <LinearLayout
-                   android:layout_width="90dp"
+                   android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/crop_invoice_table_border"
                    android:orientation="horizontal">
@@ -157,7 +158,7 @@
                        android:textSize="13sp"/>
                </LinearLayout>
                <LinearLayout
-                   android:layout_width="80dp"
+                   android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/crop_invoice_table_border"
                    android:orientation="horizontal">
@@ -180,13 +181,13 @@
            </TableRow>
            <TableRow
                android:id="@+id/table_row_crop_fertilizer_npk"
-               android:layout_width="wrap_content"
+               android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingTop="8dp"
                >
                <LinearLayout
-                   android:layout_width="120dp"
+                   android:layout_width="180dp"
                    android:layout_height="wrap_content"
 
                    android:orientation="horizontal"
@@ -202,7 +203,7 @@
                        android:textSize="13sp" />
                </LinearLayout>
                <LinearLayout
-                   android:layout_width="80dp"
+                   android:layout_width="140dp"
                    android:layout_height="match_parent"
 
                    android:orientation="horizontal">
@@ -216,7 +217,7 @@
                        android:textSize="13sp"/>
                </LinearLayout>
                <LinearLayout
-                   android:layout_width="90dp"
+                   android:layout_width="150dp"
                    android:layout_height="match_parent"
 
                    android:orientation="horizontal">
@@ -230,7 +231,7 @@
                        android:textSize="13sp"/>
                </LinearLayout>
                <LinearLayout
-                   android:layout_width="100dp"
+                   android:layout_width="160dp"
                    android:layout_height="match_parent"
 
                    android:orientation="horizontal">
@@ -239,7 +240,7 @@
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/textColor"
-                       android:gravity="center_vertical"
+                       android:gravity="center"
                        android:text="3,789,789"
                        android:textSize="13sp"
                        />
@@ -258,12 +259,12 @@
            <TableRow
                android:id="@+id/table_row_crop_fertilizer_nitrogenous"
 
-               android:layout_width="wrap_content"
+               android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                >
                <LinearLayout
-                   android:layout_width="120dp"
+                   android:layout_width="180dp"
                    android:layout_height="wrap_content"
 
                    android:orientation="horizontal"
@@ -279,7 +280,7 @@
                        android:textSize="13sp" />
                </LinearLayout>
                <LinearLayout
-                   android:layout_width="80dp"
+                   android:layout_width="140dp"
                    android:layout_height="match_parent"
 
                    android:orientation="horizontal">
@@ -294,7 +295,7 @@
                        android:textSize="13sp" />
                </LinearLayout>
                <LinearLayout
-                   android:layout_width="90dp"
+                   android:layout_width="150dp"
                    android:layout_height="match_parent"
 
                    android:orientation="horizontal">
@@ -308,7 +309,7 @@
                        android:textSize="13sp"/>
                </LinearLayout>
                <LinearLayout
-                   android:layout_width="100dp"
+                   android:layout_width="160dp"
                    android:layout_height="match_parent"
 
                    android:orientation="horizontal">
@@ -318,7 +319,7 @@
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/textColor"
-                       android:gravity="center_vertical"
+                       android:gravity="center"
                        android:text="3,789,789"
                        android:textSize="13sp" />
                </LinearLayout>
@@ -336,12 +337,12 @@
            <TableRow
                android:id="@+id/table_row_crop_fertilizer_potassic"
 
-               android:layout_width="wrap_content"
+               android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                >
                <LinearLayout
-                   android:layout_width="120dp"
+                   android:layout_width="180dp"
                    android:layout_height="wrap_content"
 
                    android:orientation="horizontal"
@@ -357,7 +358,7 @@
                        android:textColor="@color/textColor"/>
                </LinearLayout>
                <LinearLayout
-                   android:layout_width="80dp"
+                   android:layout_width="140dp"
                    android:layout_height="match_parent"
 
                    android:orientation="horizontal">
@@ -372,7 +373,7 @@
                        android:textColor="@color/textColor"/>
                </LinearLayout>
                <LinearLayout
-                   android:layout_width="90dp"
+                   android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
@@ -385,7 +386,7 @@
                        android:textColor="@color/textColor"/>
                </LinearLayout>
                <LinearLayout
-                   android:layout_width="100dp"
+                   android:layout_width="160dp"
                    android:layout_height="match_parent"
 
                    android:orientation="horizontal">
@@ -394,7 +395,7 @@
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
 
-                       android:gravity="center_vertical"
+                       android:gravity="center"
                        android:text="3,789,789"
                        android:textSize="13sp"
                        android:textColor="@color/textColor"
