--- a/app/src/main/res/layout-land/content_crop_settings.xml
+++ b/app/src/main/res/layout-land/content_crop_settings.xml
@@ -132,7 +132,8 @@
                 android:text="Update"
                 android:textAllCaps="false"
                 android:textColor="#ffffff"
-                />
+                android:layout_marginStart="100dp"
+                android:layout_marginEnd="100dp"/>
 
 
         </LinearLayout>
