--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -77,6 +77,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/mainView"
+                android:padding="@dimen/margin_15"
                 android:background="@drawable/home_background">
 
                 <RelativeLayout
@@ -90,7 +91,6 @@
                         android:layout_alignParentTop="true"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginTop="20dp"
                         android:orientation="vertical">
 
                         <LinearLayout
@@ -178,7 +178,7 @@
                                     android:text="@string/humidity"
                                     android:textColor="@color/white"
                                     android:fontFamily="@font/josefin_sans"
-                                    android:textSize="20sp"
+                                    android:textSize="16sp"
                                     android:textStyle="bold" />
 
 
@@ -190,7 +190,7 @@
                                     android:text="@string/rain"
                                     android:textColor="@color/white"
                                     android:fontFamily="@font/josefin_sans"
-                                    android:textSize="20sp"
+                                    android:textSize="16sp"
                                     android:textStyle="bold" />
 
 
@@ -202,7 +202,7 @@
                                     android:text="@string/visibility"
                                     android:textColor="@color/white"
                                     android:fontFamily="@font/josefin_sans"
-                                    android:textSize="20sp"
+                                    android:textSize="16sp"
                                     android:textStyle="bold" />
 
 
@@ -214,7 +214,7 @@
                                     android:text="@string/wind"
                                     android:textColor="@color/white"
                                     android:fontFamily="@font/josefin_sans"
-                                    android:textSize="20sp"
+                                    android:textSize="16sp"
                                     android:textStyle="bold" />
 
                             </LinearLayout>
@@ -277,7 +277,7 @@
                                     android:text="@string/humidity_default"
                                     android:textColor="@color/white"
                                     android:fontFamily="@font/josefin_sans"
-                                    android:textSize="20sp"
+                                    android:textSize="16sp"
                                     android:textStyle="bold" />
 
 
@@ -290,7 +290,7 @@
                                     android:text="@string/rain_default"
                                     android:textColor="@color/white"
                                     android:fontFamily="@font/josefin_sans"
-                                    android:textSize="20sp"
+                                    android:textSize="16sp"
                                     android:textStyle="bold" />
 
 
@@ -303,7 +303,7 @@
                                     android:text="@string/visibility_default"
                                     android:textColor="@color/white"
                                     android:fontFamily="@font/josefin_sans"
-                                    android:textSize="20sp"
+                                    android:textSize="16sp"
                                     android:textStyle="bold" />
 
 
@@ -316,7 +316,7 @@
                                     android:text="@string/wind_default"
                                     android:textColor="@color/white"
                                     android:fontFamily="@font/josefin_sans"
-                                    android:textSize="20sp"
+                                    android:textSize="16sp"
                                     android:textStyle="bold" />
 
                             </LinearLayout>
@@ -339,7 +339,7 @@
                                     android:text="@string/humidity_default2"
                                     android:textColor="@color/white"
                                     android:fontFamily="@font/josefin_sans"
-                                    android:textSize="20sp"
+                                    android:textSize="16sp"
                                     android:textStyle="bold" />
 
 
