--- a/app/src/main/res/layout/content_farm_records_dashboard.xml
+++ b/app/src/main/res/layout/content_farm_records_dashboard.xml
@@ -79,18 +79,16 @@
                         android:layout_alignParentTop="true"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="@dimen/margin_15"
                         android:orientation="vertical">
 
-
-                            
-                            <androidx.cardview.widget.CardView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:clipToPadding="false"
-                                android:paddingTop="10dp"
-                                android:paddingBottom="10dp"
-                                android:background="@drawable/background_round_white">
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/background_round_white"
+                            android:clipToPadding="false"
+                            android:paddingTop="10dp"
+                            android:paddingBottom="10dp">
 
 
                             <LinearLayout
@@ -108,9 +106,9 @@
                                 <ImageView
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
                                     android:padding="20dp"
-                                    android:src="@drawable/crops"
-                                    android:layout_gravity="center"/>
+                                    android:src="@drawable/ic_crop_records" />
 
                                 <TextView
                                     android:id="@+id/tv_matings"
@@ -125,54 +123,53 @@
                                     android:textStyle="bold" />
 
 
-
                             </LinearLayout>
-                            </androidx.cardview.widget.CardView>
+                        </androidx.cardview.widget.CardView>
 
-                            <androidx.cardview.widget.CardView
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:clipToPadding="false"
+                            android:paddingTop="10dp"
+                            android:paddingBottom="10dp"
+                            android:layout_marginTop="@dimen/margin_15"
+                            android:background="@drawable/background_round_white">
+
+                        <LinearLayout
+                            android:id="@+id/layout_crop_dashboard_inventory"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginEnd="10dp"
+                            android:layout_weight="1"
+
+                            android:orientation="vertical"
+                            android:paddingBottom="5dp">
+
+                            <ImageView
+                                android:layout_width="160dp"
+                                android:layout_height="90dp"
+                                android:padding="20dp"
+                                android:src="@drawable/ic_livestock"
+                                android:layout_gravity="center"/>
+
+                            <TextView
+                                android:id="@+id/tv_litar"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:clipToPadding="false"
-                                android:paddingTop="10dp"
-                                android:paddingBottom="10dp"
-                                android:layout_marginTop="@dimen/margin_10"
-                                android:background="@drawable/background_round_white">
+                                android:layout_gravity="top"
+                                android:gravity="center"
+                                android:paddingBottom="5dp"
 
-                            <LinearLayout
-                                android:id="@+id/layout_crop_dashboard_inventory"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="10dp"
-                                android:layout_marginTop="10dp"
-                                android:layout_marginEnd="10dp"
-                                android:layout_weight="1"
-
-                                android:orientation="vertical"
-                                android:paddingBottom="5dp">
-
-                                <ImageView
-                                    android:layout_width="160dp"
-                                    android:layout_height="90dp"
-                                    android:padding="20dp"
-                                    android:src="@drawable/inventory"
-                                    android:layout_gravity="center"/>
-
-                                <TextView
-                                    android:id="@+id/tv_litar"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="top"
-                                    android:gravity="center"
-                                    android:paddingBottom="5dp"
-
-                                    android:text="@string/label_livestockrecords"
-                                    android:textAllCaps="true"
-                                    android:textColor="#000"
-                                    android:textStyle="bold" />
+                                android:text="@string/label_livestockrecords"
+                                android:textAllCaps="true"
+                                android:textColor="#000"
+                                android:textStyle="bold" />
 
 
-                            </LinearLayout>
-                            </androidx.cardview.widget.CardView>
+                        </LinearLayout>
+                        </androidx.cardview.widget.CardView>
 
 
                         <androidx.cardview.widget.CardView
@@ -181,7 +178,7 @@
                             android:clipToPadding="false"
                             android:paddingTop="10dp"
                             android:paddingBottom="10dp"
-                            android:layout_marginTop="@dimen/margin_10"
+                            android:layout_marginTop="@dimen/margin_15"
                             android:background="@drawable/background_round_white">
 
                             <LinearLayout
@@ -197,7 +194,7 @@
                                     android:layout_width="160dp"
                                     android:layout_height="90dp"
                                     android:padding="20dp"
-                                    android:src="@drawable/inventory"
+                                    android:src="@drawable/ic_store"
                                     android:layout_gravity="center"/>
 
                                 <TextView
@@ -221,7 +218,7 @@
                             android:clipToPadding="false"
                             android:paddingTop="10dp"
                             android:paddingBottom="10dp"
-                            android:layout_marginTop="@dimen/margin_10"
+                            android:layout_marginTop="@dimen/margin_15"
                             android:background="@drawable/background_round_white">
 
                             <LinearLayout
@@ -239,7 +236,7 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="90dp"
                                     android:padding="20dp"
-                                    android:src="@drawable/best_practices_second" />
+                                    android:src="@drawable/ic_financial_records" />
 
                                 <TextView
                                     android:layout_width="match_parent"
@@ -255,8 +252,6 @@
 
                             </LinearLayout>
                         </androidx.cardview.widget.CardView>
-
-
 
 
                     </LinearLayout>
