--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -69,6 +69,7 @@
     <dimen name="dimen_20dp">20dp</dimen>
     <dimen name="dimen_5dp">5dp</dimen>
     <dimen name="dimen_7dp">7dp</dimen>
+    <dimen name="margin_15">15dp</dimen>
 
 
 </resources>
